# ludus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
 /b547f013-9955-4e98-900a-00f920e4b12d/subagents/: agent-a061709df72b93465.jsonl  agent-a061709df72b93465.meta.json  agent-a2d74230ffd9ca90e.jsonl  agent-a2d74230ffd9ca90e.meta.json  agent-a6a3087d9e5e4850c.jsonl  agent-a6a3087d9e5e4850c.meta.json  agent-a707ba458d09bbe2c.jsonl  agent-a707ba458d09bbe2c.meta.json  agent-aeea632542e9b7ad2.jsonl  agent-aeea632542e9b7ad2.meta.json
 /memory/: MEMORY.md  feedback_docker_nodejs.md  project_ludus.md
.github/workflows/: docker.yml
backend/: main.py  pyproject.toml
backend/api/: metrics.py  push.py  sessions.py  websocket.py
backend/core/: config.py  connections.py  metrics.py  plugin_loader.py  push.py  redis_client.py  session.py  vapid_gen.py
backend/games/: base.py
backend/games/battleship/: game.py
backend/games/connect_four/: game.py
backend/games/dots_and_boxes/: game.py
backend/games/gomoku/: game.py
backend/games/mancala/: game.py
backend/games/mastermind/: game.py
backend/games/memory/: game.py
backend/games/mill/: game.py
backend/games/reversi/: game.py
backend/games/tictactoe/: game.py
backend/models/: schemas.py
docs/: games.md  grafana-dashboard.json  nginx.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.svelte
frontend/src/components/: GameCard.svelte  GameThumbnail.svelte  (+1 more)
(+43 files in other folders)
